...
    <string name="fecha_hasta">Fecha Hasta:</string>
    <string name="calendario">Calendario</string>
    <string name="boton_mostrar_mas_gastos">Mostrar mas Gastos</string>
    <string name="anio">Año</string>

    <string name="esta_semana">Esta semana</string>
    <string name="campo_obligatorio">Campo obligatorio!</string>
    <string name="importe_incorrecto">Ingrese un importe válido</string>
    <string name="inicio">Esta es la pagina de Inicio</string>
    <string name="gastos_favoritos">Esta es la pagina de Gastos Favoritos</string>
    <string name="gastos_programables">Esta es la pagina de Gastos Programables</string>
    <string name="presupuesto">Esta es la pagina de Presupuesto</string>
    <string name="recordatorios">Esta es la pagina de Recordatorios</string>
    <string name="ayuda">Esta es la pagina de Ayuda</string>
...
